--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>WYDAD ATHLETIC CLUB</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="home.css">
     <link rel="icon" type="image/ico" href="85.ICO">
 
 </head>
